--- a/YouTubeMvc/Views/ErrorPage/Page404.cshtml
+++ b/YouTubeMvc/Views/ErrorPage/Page404.cshtml
@@ -1,46 +1,20 @@
-﻿
-@{ ViewBag.Title = "Page404";
-                Layout = "~/Views/Shared/_AdminLayout.cshtml"; }
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <title>Aradığınız Sayfa Bulunamadı!</title>
-
-    <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
-
-    <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="~/AdminLTE-3.0.4/colorlib-error-404-10/css/style.css" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-</head>
-
-<body>
-
-    <div id="notfound">
-        <div class="notfound">
-            <div class="notfound-404">
-                <h1>Oops!</h1>
+﻿@{ ViewBag.Title = "Page404";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; }
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
             </div>
-            <h2>404 - Sayfa Bulunamadı!</h2>
-            <p>Aradığınız Sayfa Bulunamadı!</p>
-            <a href="/">Ana Sayfaya Geri Dön </a>
         </div>
     </div>
+</section>
+<section class="content">
+    <div class="error-page">
+        <h2 class="headline text-warning"> 404</h2>
 
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-
-</html>
+        <div class="error-content">
+            <h3><i class="fas fa-exclamation-triangle text-warning"></i> Oops! Sayfa Bulunamadı.</h3>
+            <p>Aradığınız sayfayı bulamadık ! :(</p>
+        </div>
+    </div>
+</section>
