--- a/YouTubeMvc/Views/Message/Inbox.cshtml
+++ b/YouTubeMvc/Views/Message/Inbox.cshtml
@@ -1,9 +1,6 @@
 ﻿@using EntityLayer.Concrete
 @model List<Message>
-
-@{ ViewBag.Title = "Inbox";
-                Layout = "~/Views/Shared/_AdminLayout.cshtml"; }
-
+@{ ViewBag.Title = "Inbox";Layout = "~/Views/Shared/_AdminLayout.cshtml"; }
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -11,13 +8,11 @@
                     <h1>Mesajlar</h1>
                 </div>
             </div>
-        </div><!-- /.container-fluid -->
+        </div>
     </section>
-   
     <section class="content">
         <div class="row">
-            @Html.Action("ContactMenuPartial", "Contact")
-            
+            @Html.Action("ContactMenuPartial", "Contact")   
             <div class="col-md-9">
                 <div class="card card-primary card-outline">
                     <div class="card-header">
@@ -110,8 +105,6 @@
                     </div>
                 </div>
                 <!-- /.card -->
-            </div>
-            <!-- /.col -->
+            </div>  
         </div>
-        <!-- /.row -->
     </section>
