--- a/YouTubeMvc/Views/Contact/ContactMenuPartial.cshtml
+++ b/YouTubeMvc/Views/Contact/ContactMenuPartial.cshtml
@@ -14,13 +14,15 @@
                 <li class="nav-item active">
                     <a href="/Contact/Index/" class="nav-link">
                         <i class="fas fa-mail-bulk"></i> İletişim
-                        <span class="badge bg-danger float-right">@ViewBag.contact</span>
+                        <span class="badge bg-danger float-right">@ViewBag.contact Okunmamış Mesaj</span>
+                        <span class="badge bg-success float-right">Topl. Mesaj: @ViewBag.TopContact</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a href="/Message/Inbox/" class="nav-link">
                         <i class="fas fa-inbox"></i> Gelen Mesajlar
-                        <span class="badge bg-primary float-right">@ViewBag.receiverMail</span>
+                        <span class="badge bg-primary float-right">@ViewBag.receiverMail Okunmamış Mesaj</span>
+                        <span class="badge bg-success float-right">Topl. Mesaj: @ViewBag.TopMessage</span>
                     </a>
                 </li>
                 <li class="nav-item">
