--- a/YouTubeMvc/Views/Contact/Index.cshtml
+++ b/YouTubeMvc/Views/Contact/Index.cshtml
@@ -62,14 +62,22 @@
                                 <label for="check1"></label>
                             </div>
                         </td>
-                        <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
+                        <td class="mailbox-star">
+                            @if (item.IsRead == true)
+                            {
+            <a href="#" class="text-success"><i class="fas fa-star text-warning"></i>Okundu</a> }
+        else
+        {
+<a href="#" class="text-danger"><i class="fas fa-star text-warning"></i>Okunmadı</a>}
+                        </td>
                         <td class="mailbox-name"><a href="/Contact/GetContactDetails/@item.ContactID">@item.UserName</a></td>
                         <td class="mailbox-subject">
                             <b>@item.Subject</b> - @item.Message.Substring(0, 4)...
                         </td>
                         <td class="mailbox-attachment"></td>
                         <td class="mailbox-date">@(((DateTime)item.ContactDate).ToString("dd-MMM-yyyy"))</td>
-                    </tr>}
+                    </tr>
+}
                             </tbody>
                         </table>
                     </div>
@@ -98,4 +106,3 @@
         </div>
     </div>
 </section>
-
