--- a/YouTubeMvc/Views/Message/GetDraftMessageDetails.cshtml
+++ b/YouTubeMvc/Views/Message/GetDraftMessageDetails.cshtml
@@ -1,9 +1,7 @@
 ﻿@model EntityLayer.Concrete.Message
 @{ ViewBag.Title = "GetSendboxMessageDetails";
                 Layout = "~/Views/Shared/_AdminLayout.cshtml"; }
-
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
+  <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
@@ -11,20 +9,17 @@
                 </div>
 
             </div>
-        </div><!-- /.container-fluid -->
-    </section>
-    <!-- Main content -->
-    <section class="content">
+        </div>
+  </section>
+  <section class="content">
         <div class="container-fluid">
             <div class="row">
                 @Html.Action("ContactMenuPartial", "Contact")
-                <!-- /.col -->
                 <div class="col-md-9">
                     <div class="card card-primary card-outline">
                         <div class="card-header">
                             <h3 class="card-title">Mesajı Oku</h3>
                         </div>
-                        <!-- /.card-header -->
                         <div class="card-body p-0">
                             <div class="mailbox-read-info">
                                 <h5>Konu: @Html.DisplayFor(x => x.Subject)</h5>
@@ -36,20 +31,12 @@
                                     </span>
                                 </h6>
                             </div>
-                            <!-- /.mailbox-read-info -->
-                            <!-- /.mailbox-controls -->
                             <div class="mailbox-read-message">
                                 <p>@Html.Raw(Model.MessageContent)</p>
-                                @*<p>@Html.DisplayFor(x => x.MessageContent)</p>*@
                             </div>
-                            <!-- /.mailbox-read-message -->
                         </div>
-                        <!-- /.card-footer -->
                     </div>
-                    <!-- /.card -->
                 </div>
-                <!-- /.col -->
             </div>
-            <!-- /.row -->
         </div>
     </section>
