--- a/YouTubeMvc/Views/WriterPanel/WriterProfile.cshtml
+++ b/YouTubeMvc/Views/WriterPanel/WriterProfile.cshtml
@@ -1,5 +1,46 @@
-﻿
+﻿@model EntityLayer.Dtos.WriterEditDto
 @{
     ViewBag.Title = "WriterProfile";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
+<h2>Profilinizi Düzenleyin</h2>
+@using (Html.BeginForm("WriterProfile", "WriterPanel", FormMethod.Post))
+{
+    <div class="form-group">
+        @Html.HiddenFor(x => x.WriterID, new { @class = "form-control" })
+        @Html.Label("Yazar Adı")
+        @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterName, null, new { @class = "text-danger" })
+        <br />
+        @Html.Label("Yazar Soyadı")
+        @Html.TextBoxFor(x => x.WriterSurname, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterSurname, null, new { @class = "text-danger" })
+        <br />
+        @Html.Label("Yazar Mail")
+        @Html.TextBoxFor(x => x.WriterEmail, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterEmail, null, new { @class = "text-danger" })
+        <br />
+        @*@Html.Label("Yazar Şifre")
+            @Html.TextBoxFor(x => x.WriterPasswordHash, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.WriterPasswordHash, null, new { @class = "text-danger" })
+            <br />*@
+        @Html.Label("Yazar Şifre")
+        @Html.TextBoxFor(x => x.WriterPassword, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterPassword, null, new { @class = "text-danger" })
+        <br />
+        @Html.Label("Yazar Fotoğraf")
+        <img src="@Model.WriterImage" alt="Alternate Text" width="80" height="80" />
+        @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterImage, null, new { @class = "text-danger" })
+        <br />
+        @Html.Label("Yazar Ünvan")
+        @Html.TextBoxFor(x => x.WriterTitle, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterTitle, null, new { @class = "text-danger" })
+        <br />
+        @Html.Label("Yazar Hakkında")
+        @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterAbout, null, new { @class = "text-danger" })
+        <br />
+        <button class="btn btn-success">Güncelle</button>
+    </div>}
+
